--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "update-data": "node scripts/update-data-files.js",
+    "watch-data": "node scripts/update-data-files.js --watch"
   },
   "dependencies": {
     "react": "^18.2.0",
