Enhance data handling and dashboard functionality for options and dark pool analysis
- Added new scripts for updating and watching dark pool data files.
- Updated package.json to include commands for dark pool data management.
- Modified data parsing functions to support dark pool data alongside options data.
- Implemented a toggle between Options and Dark Pool dashboards in the main App component.
- Improved CSS for responsive design and navigation buttons in the dashboard.
- Updated TickerList component to remove unnecessary text for cleaner UI.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "update-data": "node scripts/update-data-files.js",
-    "watch-data": "node scripts/update-data-files.js --watch"
+    "watch-data": "node scripts/update-data-files.js --watch",
+    "update-darkpool-data": "node scripts/update-darkpool-data-files.js",
+    "watch-darkpool-data": "node scripts/update-darkpool-data-files.js --watch",
+    "update-all-data": "node scripts/update-all-data-files.js"
   },
   "dependencies": {
     "lucide-react": "^0.263.1",
