Enhance data handling and dashboard functionality
- Updated package.json to include new scripts for combining data and checking data status.
- Modified Vite configuration to copy only combined data files, improving data management.
- Updated API data file to include new combined options data entry with the latest timestamp.
- Enhanced OptionsDashboard to load combined file metadata and display last updated information.
- Improved CSV data parsing to handle both clean and legacy formats, ensuring compatibility with various data sources.
- Refined file loading logic to prioritize combined data file retrieval and improve cache management.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prebuild": "npm run update-all-data",
+    "prebuild": "npm run combine-data && npm run update-all-data",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -15,7 +15,9 @@
     "watch-data": "node scripts/update-data-files.js --watch",
     "update-darkpool-data": "node scripts/update-darkpool-data-files.js",
     "watch-darkpool-data": "node scripts/update-darkpool-data-files.js --watch",
-    "update-all-data": "node scripts/update-all-data-files.js"
+    "update-all-data": "node scripts/update-all-data-files.js",
+    "combine-data": "node scripts/combineDataFiles.js",
+    "check-data-status": "node scripts/checkDataStatus.js"
   },
   "dependencies": {
     "lucide-react": "^0.263.1",
